@startuml
'https://plantuml.com/class-diagram

Sensor_Value --|> Sensor : extends >
DomainId --|> ValueObject : extends >
WS8600 ..|> Sensor_Value : implements >
WS8600 ..|> AggregateRoot : implements >
WS8600Value ..|> ValueObject : implements >
WS8600Value ..|> Value : implements >
DeviceId ..|> DomainId : implements >
SensorId ..|> DomainId : implements >
SensorModelId ..|> DomainId : implements >
WS8600 -- WS8600Value : uses >
WS8600 -- DeviceId : contains >
WS8600 -- SensorId : contains >
WS8600 -- SensorModelId : contains >
AggregateRoot --|> DomainEntity : extends >

interface DomainEntity{
}

interface ValueObject{
}

interface DomainId {
}

interface Sensor{
}

interface Sensor_Value{
+ getValue()
}

interface AggregateRoot{
}

interface Value{
}

class WS8600{
- _sensorValue: WS8600Value
- _sensorID: SensorId
- _deviceID: DeviceId
- _sensorModelID: SensorModelId
- _sensorData: Map<Integer, List<Double>>

# WS8600(deviceId: DeviceId, sensorModelId: SensorModelId, sensorID: SensorId): WS8600
- areConstructorArgumentsValid(sensorID: SensorID, deviceID: DeviceId, sensorModelID: SensorModelID): boolean
+ identity(): SensorId
+ sameAs (object: Object): boolean
+ equals (object: Object): boolean
+ setData(): Map<Integer, List<Double>>
+ setValue(readingNumber: int)
+ getValue(): Value
}


class WS8600Value {

- _speed: double
- _direction: double
# WS8600Value (value: String): WS8600Value
- isSpeedValid(speed: double): boolean
- isDirectionValid(direction: double): boolean
+ radiansToCardinal(): String
+ equals (object: Object): boolean
+ toString(): String
}

class DeviceId{
- _id: String
# DeviceId(id: String): DeviceId
+ equals (object: Object): boolean
+ hashCode(): int
+ toString(): String
}

class SensorModelId{
- _id: String
# SensorModelId(id: String): SensorModelId
+ equals (object: Object): boolean
+ toString(): String
}

class SensorId{
- _id: String
# SensorId(id: String): SensorId
+ equals (object: Object): boolean
+ toString(): String
}


@enduml